--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -551,7 +551,7 @@
                                                 <div class="heading-step1">
                                                     <h4>Subscription Schedule</h4>
                                                     <p>Start Date:<span class="data-span">{{startDate | date:
-                                                            'dd/MM/yyyy'}}</span></p>
+                                                            'MM/dd/yyyy'}}</span></p>
                                                     <span class="arrow-stepp">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="6.6"
                                                             height="11.2" viewBox="0 0 6.6 11.2">
