--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -414,7 +414,7 @@
 
                                             <tr>
                                                 <td>You Saved</td>
-                                                <td>${{onetimepurchasediscount|number:'.1-2'}}</td>
+                                                <td>-${{onetimepurchasediscount|number:'.1-2'}}</td>
                                             </tr>
 
                                             <tr>
