--- a/src/app/components/store/checkout/checkout.component.scss
+++ b/src/app/components/store/checkout/checkout.component.scss
@@ -665,3 +665,19 @@ Media Queries
   font-size: 80%;
   color: #dc3545;
 }
+
+
+button.simplelink {
+    display: inline-block !important;
+    padding: 0;
+    width: auto !important;
+    border: none;
+    background: none;
+    font-size: inherit !important;
+    color: #2196f3 !important;
+    cursor: pointer;
+}
+
+button.simplelink:hover {
+    cursor: pointer;
+}
