--- a/src/app/components/store/search_product/searchproduct/searchproduct.component.html
+++ b/src/app/components/store/search_product/searchproduct/searchproduct.component.html
@@ -242,7 +242,7 @@
                     <select [(ngModel)]="quantityValue"  [ngModelOptions]="{standalone: true}" class="form-control">
                       <option class="dropdown-item" disabled selected value="undefined">Select Quantity</option>
                       <option *ngFor="let qty of quantity" [value]="qty.value">
-                      {{qty.value}}
+                      {{qty.name}}
                        </option>
                     </select>
 
