changes related to add cart user issue

--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -1422,7 +1422,7 @@
                                         </div>
                                     </div>
                                     <div class="link-select">
-                                        <a (click)="choose_referrer(referrer)">Select</a>
+                                        <a (click)="choose_referrer(referrer)">Select</a>`
                                     </div>
                                 </div>
                             </div>
